--- a/risslibcheck/CMakeLists.txt
+++ b/risslibcheck/CMakeLists.txt
@@ -1,27 +1,25 @@
-# Project definitions:
+# Project definitions
 # 
 project(risslibcheck)
 
-# Dependencies:
 # 
-
-# Executables:
+# Executables
 # 
-add_executable(${PROJECT_NAME} Main.cc)
+add_executable(risslibcheck Main.cc)
 
 if(STATIC_BINARIES)
   # Because we got a circular dependency, we have have to specify riss-lib-* twice
   # or use the --start-group/--end-group notation which are only valid for the GNU
   # linker
-  target_link_libraries(${PROJECT_NAME} riss-lib-static coprocessor-lib-static riss-lib-static)
+  target_link_libraries(risslibcheck riss-lib-static coprocessor-lib-static riss-lib-static)
 else()
-  target_link_libraries(${PROJECT_NAME} riss-lib-shared coprocessor-lib-shared)
+  target_link_libraries(risslibcheck riss-lib-shared coprocessor-lib-shared)
 endif()
 
-
-# Installation:
 # 
-install(TARGETS   ${PROJECT_NAME} RUNTIME DESTINATION bin)
-install(DIRECTORY ${PROJECT_NAME}
-        DESTINATION include/${PROJECT_NAME}
+# Installation
+# 
+install(TARGETS   risslibcheck RUNTIME DESTINATION bin)
+install(DIRECTORY risslibcheck
+        DESTINATION include/risslibcheck
         FILES_MATCHING PATTERN "*.h")
