Adds armadillo as external project

--- a/classifier/CMakeLists.txt
+++ b/classifier/CMakeLists.txt
@@ -1,17 +1,17 @@
-# Project definitions:
+# Project definitions
 # 
 project(classifier)
 version("1.0.0")
 
-
-# Dependencies:
+# 
+# Dependencies
 # 
 find_package(ZLIB)
 
 include_directories(${ZLIB_INCLUDE_DIR})
 
-
-# Libraries:
+# 
+# Libraries
 # 
 set(LIB_SOURCES
     Classifier.cc
@@ -34,8 +34,29 @@ set_target_properties(${PROJECT_NAME}-lib-shared PROPERTIES
                                                  VERSION ${VERSION}
                                                  SOVERSION ${SOVERSION})
 
+if(STATIC_BINARIES)
+  set(ARMADILLO_SHARED "-DBUILD_SHARED_LIBS=OFF")
+else()
+  set(ARMADILLO_SHARED "-DBUILD_SHARED_LIBS=ON")
+endif()
 
-# Executables:
+
+# Adds armadillo library as build target. We use a dirty hack,
+# to install the header files directly into the source folder
+# (they are ignored by git)
+include(ExternalProject)
+ExternalProject_Add(armadillo
+  URL http://sourceforge.net/projects/arma/files/armadillo-5.200.2.tar.gz
+  PREFIX "armadillo"
+  CMAKE_ARGS ${ARMADILLO_SHARED}
+             -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
+             -DINSTALL_LIB_DIR=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
+             -DINSTALL_INCLUDE_DIR=${CMAKE_SOURCE_DIR}/armadillo
+) 
+
+
+# 
+# Executables
 # 
 add_executable(${PROJECT_NAME} Main.cc)
 
@@ -46,7 +67,8 @@ else()
   target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib-shared riss-lib-shared coprocessor-lib-shared -lpca -larmadillo)
 endif()
 
-# Installation:
+# 
+# Installation
 # 
 install(TARGETS ${PROJECT_NAME}-lib-static ${PROJECT_NAME}-lib-shared ${PROJECT_NAME}
         RUNTIME DESTINATION bin
