--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ build-and-check:
     # Therefore we only provide build tests for the master
     # branch.
     - master
+    - receiving-dev
 
 # We could split the tests in separate tests, but they would possibly executed
 # in parallel. This makes it more complicated. Therefore we we have a single
