--- a/riss/CMakeLists.txt
+++ b/riss/CMakeLists.txt
@@ -83,11 +83,11 @@ add_custom_command(TARGET  ${PROJECT_NAME}-simp POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_NAME}-simp ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME})
 
 if(STATIC_BINARIES)
-  target_link_libraries(${PROJECT_NAME}-core ${PROJECT_NAME}-lib-static coprocessor-lib-static classifier-lib-static)
-  target_link_libraries(${PROJECT_NAME}-simp ${PROJECT_NAME}-lib-static coprocessor-lib-static classifier-lib-static)
+  target_link_libraries(${PROJECT_NAME}-core ${PROJECT_NAME}-lib-static coprocessor-lib-static classifier-lib-static libpca-static)
+  target_link_libraries(${PROJECT_NAME}-simp ${PROJECT_NAME}-lib-static coprocessor-lib-static classifier-lib-static libpca-static)
 else()
-  target_link_libraries(${PROJECT_NAME}-core ${PROJECT_NAME}-lib-shared coprocessor-lib-shared classifier-lib-shared)
-  target_link_libraries(${PROJECT_NAME}-simp ${PROJECT_NAME}-lib-shared coprocessor-lib-shared classifier-lib-shared)
+  target_link_libraries(${PROJECT_NAME}-core ${PROJECT_NAME}-lib-shared coprocessor-lib-shared classifier-lib-shared libpca-shared)
+  target_link_libraries(${PROJECT_NAME}-simp ${PROJECT_NAME}-lib-shared coprocessor-lib-shared classifier-lib-shared libpca-shared)
 endif()
 
 # Installation:
