quick-fix: build always with DPCASSO, as pfolio is not included correctly in pcasso (builds solver without DPCASSO)

--- a/coprocessor/CMakeLists.txt
+++ b/coprocessor/CMakeLists.txt
@@ -43,6 +43,10 @@ set(LIB_SOURCES
 add_library(coprocessor-lib-static STATIC ${LIB_SOURCES})
 add_library(coprocessor-lib-shared SHARED ${LIB_SOURCES})
 add_library(coprocessor-lib-object OBJECT ${LIB_SOURCES})
+# This extra libraries are build for pcasso, because pcasso needs some
+# extensions to the riss source code
+add_library(coprocessor-pcasso-lib-static STATIC ${LIB_SOURCES})
+add_library(coprocessor-pcasso-lib-shared SHARED ${LIB_SOURCES})
 
 set_target_properties(coprocessor-lib-static PROPERTIES
                                              OUTPUT_NAME "coprocessor")
@@ -50,6 +54,14 @@ set_target_properties(coprocessor-lib-shared PROPERTIES
                                              OUTPUT_NAME "coprocessor" 
                                              VERSION ${VERSION}
                                              SOVERSION ${SOVERSION})
+set_target_properties(coprocessor-pcasso-lib-static PROPERTIES
+                                                    OUTPUT_NAME "coprocessor-pcasso"
+                                                    COMPILE_FLAGS "-DPCASSO")
+set_target_properties(coprocessor-pcasso-lib-shared PROPERTIES
+                                                    OUTPUT_NAME "coprocessor-pcasso" 
+                                                    VERSION ${VERSION}
+                                                    SOVERSION ${SOVERSION}
+                                                    COMPILE_FLAGS "-DPCASSO")
 
 git_signature(PROJECT_NAME "coprocessor"
               SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/version.cmake
@@ -70,7 +82,7 @@ endif()
 # 
 # Installation
 # 
-install(TARGETS coprocessor-lib-static coprocessor-lib-shared coprocessor
+install(TARGETS coprocessor-lib-static coprocessor-lib-shared coprocessor-pcasso-lib-static coprocessor-pcasso-lib-shared coprocessor
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
