--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,17 @@ version.cc
 .kdev_include_paths
 *.kdev4
 
-# CMake:
+# 
+# CMake
 # 
 # Some common build targets
 debug/
 release/
 build/
+
+# armadillo library headers
+# they are copied by CMake
+armadillo/
 
 # CI wrapper script
 tools/checker/solver-wrapper.sh
