--- a/libpca/CMakeLists.txt
+++ b/libpca/CMakeLists.txt
@@ -13,7 +13,7 @@ if(STATIC_BINARIES)
   # Adds armadillo library as build target. We use a dirty hack,
   # to install the header files directly into the source folder
   # (they are ignored by git)
-  ExternalProject_Add(armadillo-lib-static
+  ExternalProject_Add(armadillo-static
     URL http://sourceforge.net/projects/arma/files/armadillo-5.200.2.tar.gz
     PREFIX "armadillo"
     CMAKE_ARGS -DBUILD_SHARED_LIBS=OFF
@@ -25,15 +25,19 @@ if(STATIC_BINARIES)
                -DINSTALL_INCLUDE_DIR=${CMAKE_SOURCE_DIR}/armadillo
   )
 
+  # add static armadillo library
+  add_library(armadillo-lib-static STATIC IMPORTED)
+  set_target_properties(armadillo-lib-static PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libarmadillo${CMAKE_STATIC_LIBRARY_SUFFIX})
+  add_dependencies(armadillo-lib-static armadillo-static)
+
   # 
   # libpca static
   # 
   add_library(libpca-static STATIC ${LIB_SOURCES})
   set_target_properties(libpca-static PROPERTIES OUTPUT_NAME "pca")
-  target_link_libraries(libpca-static "-larmadillo")
-  add_dependencies(libpca-static armadillo-lib-static)
+  target_link_libraries(libpca-static armadillo-lib-static)
 else()
-  ExternalProject_Add(armadillo-lib-shared
+  ExternalProject_Add(armadillo-shared
     URL http://sourceforge.net/projects/arma/files/armadillo-5.200.2.tar.gz
     PREFIX "armadillo"
     CMAKE_ARGS -DBUILD_SHARED_LIBS=ON
@@ -42,6 +46,11 @@ else()
                -DINSTALL_INCLUDE_DIR=${CMAKE_SOURCE_DIR}/armadillo
   )
   
+  # add shared armadillo library
+  add_library(armadillo-lib-shared STATIC IMPORTED)
+  set_target_properties(armadillo-lib-shared PROPERTIES IMPORTED_LOCATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libarmadillo${CMAKE_SHARED_LIBRARY_SUFFIX})
+  add_dependencies(armadillo-lib-shared armadillo-shared)
+
   # 
   # libpca shared
   # 
@@ -49,6 +58,6 @@ else()
   set_target_properties(libpca-shared PROPERTIES OUTPUT_NAME "pca"
                                                  VERSION ${VERSION}
                                                  SOVERSION ${SOVERSION})
-  target_link_libraries(libpca-shared "-larmadillo")
-  add_dependencies(libpca-shared armadillo-lib-shared)
+  target_link_libraries(libpca-shared armadillo-lib-shared)
 endif()
+
