Builds pcasso specific classifier lib

--- a/classifier/CMakeLists.txt
+++ b/classifier/CMakeLists.txt
@@ -28,8 +28,16 @@ set(LIB_SOURCES
 add_library(classifier-lib-static STATIC ${LIB_SOURCES})
 add_library(classifier-lib-shared SHARED ${LIB_SOURCES})
 
+# This extra libraries are build for pcasso, because pcasso needs some
+# extensions to the riss source code
+add_library(classifier-pcasso-lib-static STATIC ${LIB_SOURCES})
+add_library(classifier-pcasso-lib-shared SHARED ${LIB_SOURCES})
+
 target_link_libraries(classifier-lib-static libpca-static)
 target_link_libraries(classifier-lib-shared libpca-shared)
+
+target_link_libraries(classifier-pcasso-lib-static libpca-static)
+target_link_libraries(classifier-pcasso-lib-shared libpca-shared)
 
 set_target_properties(classifier-lib-static PROPERTIES
                                             OUTPUT_NAME "classifier")
@@ -37,6 +45,15 @@ set_target_properties(classifier-lib-shared PROPERTIES
                                             OUTPUT_NAME "classifier" 
                                             VERSION ${VERSION}
                                             SOVERSION ${SOVERSION})
+
+set_target_properties(classifier-pcasso-lib-static PROPERTIES
+                                                   OUTPUT_NAME "classifier-pcasso"
+                                                   COMPILE_FLAGS "-DPCASSO")
+set_target_properties(classifier-pcasso-lib-shared PROPERTIES
+                                                   OUTPUT_NAME "classifier-pcasso"
+                                                   COMPILE_FLAGS "-DPCASSO"
+                                                   VERSION ${VERSION}
+                                                   SOVERSION ${SOVERSION})
 
 # 
 # Executables
